# second_brain_ai_assistant

./: .gitignore  Makefile  README.md
apps/slack-integrations-offline/: README.md  main.py  pyproject.toml
apps/slack-integrations-offline/configs/: collect_crawl_data.yaml  compute_rag.yaml  etl.yaml
apps/slack-integrations-offline/pipelines/: collect_crawl_data.py  compute_rag.py  etl.py
apps/slack-integrations-offline/src/slack_integrations_offline/: config.py  utils.py
apps/slack-integrations-offline/src/slack_integrations_offline/domain/: document.py
apps/slack-integrations-offline/src/slack_integrations_offline/rag/: embeddings.py  retrievers.py  splitters.py
apps/slack-integrations-offline/steps/collect_crawl_data/: extract_crawled_data.py
apps/slack-integrations-offline/steps/collect_urls/: extract_urls_from_sitemap.py
apps/slack-integrations-offline/steps/compute_rag/: chunk_embed_load.py
apps/slack-integrations-offline/steps/generate_summaries/: generate_summary.py
apps/slack-integrations-offline/steps/infrastructure/: fetch_from_mongodb.py  ingest_to_mongodb.py  read_documents_from_disk.py  save_documents_to_disk.py
apps/slack-integrations-offline/tools/: run.py
apps/slack-integrations-online/: README.md  pyproject.toml
apps/slack-integrations-online/src/slack_integrations_online/: config.py  utils.py
apps/slack-integrations-online/src/slack_integrations_online/tools/: app.py  slack_app.py
apps/slack-integrations-online/tools/: app.py  slack_app.py
(+11 files in other folders)
