[project]
name = "slack-integrations-offline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bson>=0.5.10",
    "crawl4ai>=0.4.24",
    "google-api-core>=2.28.1",
    "google-auth>=2.43.0",
    "langchain>=1.2.0",
    "langchain-mongodb>=0.9.0",
    "langchain-openai>=1.1.6",
    "langchain-text-splitters>=1.1.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "pymongo[srv]>=4.15.5",
    "zenml[server]>=0.92.0",
]
